--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -4,28 +4,5 @@
     <h1>hello</h1>
 
 
-    <form action="{{ path('user_create_order') }}" method="post">
-        <div>
-            <h1>Create Order</h1>
-        </div>
-        <div>
-            <label>
-                Description
-                <br>
-                <textarea
-                    name="description"
-                ></textarea>
-            </label>
-        </div>
-        <br>
-        <div>
-            <label>
-                Add files
-                <br>
-                <input type="file" multiple>
-            </label>
-        </div>
-        <br>
-        <input type="submit" value="Create">
-    </form>
+    {{ form(form, {'action': path('user_create_order')})  }}
 {% endblock %}
