--- a/templates/performer/index.html.twig
+++ b/templates/performer/index.html.twig
@@ -4,14 +4,10 @@
     <h1>performer</h1>
     {% for order in orders %}
 
-        <div> {{ order.id }} </div>
+        <div> {{ order.id }} | <a href="{{ path('performer_order_inform', {'order' : order.id}) }}">подробне</a> </div>
         <div> {{ order.description }} </div>
+        <div> Статус: {{ order.status }} </div>
 
-        <form method="post" action=" {{ path('performer_order_aprove', { 'order': order.id }) }}">
-            <input type="file" name="file">
-            <br>
-            <input type="submit">
-        </form>
         <hr>
     {% endfor %}
 {% endblock %}
