--- a/templates/admin/corrector/orders/index.html.twig
+++ b/templates/admin/corrector/orders/index.html.twig
@@ -5,8 +5,8 @@
 {% block body %}
     <section class="content-header">
         <h1>
-            Модерирование заказов
+            Коректура заказов
         </h1>
     </section>
-
+    <div id="corrector_order_check"></div>
 {% endblock %}
